# V4

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
bare-metal/riscv32/: Makefile  README.md  bare-metal-test.elf  link.ld  main.c  main_simple.c  start.S  uart.h
docs/: hal-api.md
include/v4/: arena.h  errors.def  errors.h  errors.hpp  opcodes.def  opcodes.h  opcodes.hpp  panic.h  panic.hpp  sys_ids.h  task.h  task_platform.h  v4_hal.h  vm_api.h  vm_api.hpp
include/v4/internal/: memory.hpp  scheduler.hpp  task.hpp  task_backend.h  vm.h
src/: arena.cpp  core.cpp  hal_wrapper.cpp  memory.cpp  message.cpp  panic.cpp  scheduler.cpp  task.cpp  task_backend_custom.cpp  task_backend_freertos.cpp  vm_core.cpp
tests/: mock_hal.cpp  mock_task_platform.cpp  test_api_extensions.cpp  test_arena.cpp  test_call.cpp  test_memory.cpp  test_panic.cpp  test_return_stack.cpp  test_sys.cpp  test_task.cpp  test_vm.cpp  test_vm_arena.cpp  test_vm_c.c  test_word_shadowing.cpp
tools/: v4repl.cpp
